Fixed game creation issue